--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+.page-content {
+  padding-top: 50px;
+  padding-right: 30px;
+  padding-bottom: 50px;
+  padding-left: 80px;
+}
+
 .tablehiero {
   border: 0px;
 }
@@ -5,6 +12,6 @@
 .tablehiero tr {
   text-align: center;
   overflow: hidden;
-  height: 32px;
+  height: 20px;
   white-space: nowrap;
 }
